fix: check email and username route redundancy
