# docs/swagger.json
@@ -18,67 +18,28 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/auth/check-email": {
-            "get": {
-                "description": "Check if an email is already registered",
+        "/api/v1/auth/check-availability": {
+            "post": {
+                "description": "Check if an email or username is already registered/taken",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Check email availability",
+                "summary": "Check email and username availability",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Email to check",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                        "description": "Email and/or username to check",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/lib.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "object",
-                                            "additionalProperties": {
-                                                "type": "boolean"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/dto.CheckAvailabilityRequest"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/lib.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/auth/check-username": {
-            "get": {
-                "description": "Check if a username is already taken",
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Check username availability",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Username to check",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -811,6 +772,17 @@
                 }
             }
         },
+        "dto.CheckAvailabilityRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ForgotPasswordRequest": {
             "type": "object",
             "required": [
@@ -867,6 +839,9 @@
         },
         "dto.RefreshTokenRequest": {
             "type": "object",
+            "required": [
+                "refresh_token"
+            ],
             "properties": {
                 "refresh_token": {
                     "type": "string"
@@ -910,7 +885,9 @@
                     "minLength": 8
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 3
                 }
             }
         },
