# router/api/v1/auth_router.go
@@ -11,8 +11,7 @@ import (
 func AuthRoutes(rg *gin.RouterGroup, h handler.AuthHandler, mw middleware.Middleware) {
 	auth := rg.Group("/auth")
 	{
-		auth.GET("/check-email", mw.RateLimit(5, time.Minute), h.CheckEmail)
-		auth.GET("/check-username", mw.RateLimit(5, time.Minute), h.CheckUsername)
+		auth.POST("/check-availability", mw.RateLimit(30, time.Minute), h.CheckAvailability)
 		auth.POST("/register", mw.RateLimit(10, time.Minute), h.Register)
 		auth.GET("/verify-email", mw.RateLimit(10, time.Minute), h.VerifyEmail)
 		auth.POST("/login", mw.RateLimit(10, time.Minute), h.Login)
